# enochian-js

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yaml  publish-js.yaml  publish-studio.yaml  publish.yaml
.husky/: pre-commit
.zed/: settings.json
docs/: mint.json  package.json  style.css
docs/api-reference/: backends.mdx  program-state.mdx  request-types.mdx
docs/introduction/: enochian.mdx  examples.mdx  introduction.mdx  quickstart.mdx
docs/snippets/: codeblock-with-output.mdx  view-in-github.mdx
js/: api.ts  biome.json  chatTemplate.ts  code.js  codeog.js  package.json  pnpm-lock.yaml  programState.ts  test.js  test.ts  tsconfig.build.json  tsconfig.json
js/.husky/: pre-commit
js/examples/: _test.ts  backendSwapping.ts  basic.ts  choices.ts  code.js  constrained.ts  dbos.ts  debug.ts  editMessageHistory.ts  fork.ts  maxPromptTokens.ts  openai.ts  promptimizer.ts  streaming.ts
js/examples/dbos-example/: .gitignore  dbos-config.yaml  knexfile.js  nodemon.json  package.json  tsconfig.json
js/examples/dbos-example/migrations/: 20240212161006_create_dbos_hello_tables.js
js/examples/promptimizer/: code.js  package.json  promptimizer.ts  tsconfig.json
js/src/: api.ts  choices.ts  debug.ts  index.ts  maxContextTokens.ts  programState.ts  utils.ts
js/src/backends/: backend.interface.ts  openai.ts  sgl.ts
js/tests/: basic.test.ts  constrained.test.ts  controlFlow.test.ts  debug.test.ts  fork.test.ts  functionality.test.ts  openai.test.ts  sgl.test.ts  tools.test.ts  transform.test.ts  utils.ts  vitest.config.ts
python/: .ci.sh  LICENSE  README.md  pyproject.toml
python/enochian/: api.py
python/enochian/backends/: backend.py
python/test/: basic.py
studio/: .gitignore  README.md  components.json  debug.js  enochian-studio.db  index.d.ts  migrate.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
studio-python/: .ci.sh  .gitignore  README.md  pyproject.toml
studio-python/enochian_studio/: __init__.py  cli.py  installer.py  node_runner.py  package.json
studio/cli/: index.js
studio/migrations/: 001_init.sql
studio/src/: app.css  app.tsx  entry-client.tsx  entry-server.tsx
studio/src/components/: Counter.tsx
studio/src/components/ui/: button.tsx  (+1 more)
studio/src/lib/: api.ts  db.ts
studio/src/routes/: [...404].tsx  index.tsx
studio/tests/: api.test.ts  vitest.config.ts
(+9 files in other folders)
